--- a/kubernetes/sonarr/sonarr-deployment.yaml
+++ b/kubernetes/sonarr/sonarr-deployment.yaml
@@ -2,19 +2,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sonarr
+  name: sonarr-deployment
   labels:
     app: media
 spec:
-  containers:
-    - name: sonarr
-      image: linuxserver\sonarr
-      ports:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: media
+  template:
+    metadata:
+      labels:
+        app: media
+    spec:
+      containers:
+      - name: sonarr
+        image: linuxserver\sonarr
+        ports:
         - containerPort: 8989
-      env:
-        - name: TZ
-          value: America\Chicago
-        - name: PUID
-          value: 1006
-        - name: PGID
-          value: 1005
+        env:
+          - name: TZ
+            value: America\Chicago
+          - name: PUID
+            value: 1006
+          - name: PGID
+            value: 1005
